--- a/.github/workflows/pr-workflow.yml
+++ b/.github/workflows/pr-workflow.yml
@@ -7,8 +7,8 @@ jobs:
     runs-on: ubuntu-latest
     name: A job to say hello
     steps:
-    - name: Hello world action step
-      id: hello
+    - uses: actions/checkout
+    - id: hello
       uses: ./.github/actions/pr
       with:
         who-to-greet: 'Hi'
