--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node
+    - uses: actions/setup-node@v1
       with:
         node-version: 12.x
     - run: npm install
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node
+    - uses: actions/setup-node@v1
       with:
         node-version: 12.x
     - run: npm install
@@ -25,7 +25,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node
+    - uses: actions/setup-node@v1
       with:
         node-version: 12.x
     - run: npm install
@@ -34,7 +34,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: actions/setup-node
+    - uses: actions/setup-node@v1
       with:
         node-version: 12.x
     - run: npm install
