--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -8,4 +8,6 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/pr-environment
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
