--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -7,7 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - uses: ./.github/actions/pr-environment
+    - uses: actions/setup-node@v1
+      with:
+        node-version: 12.x
+        registry-url: https://npm.pkg.github.com/
+        scope: '@bradenhs'
+    - run: npm publish --tag ${{github.sha}}
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+        NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
