--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -12,6 +12,7 @@ jobs:
         node-version: 12.x
         registry-url: https://npm.pkg.github.com/
         scope: '@bradenhs'
+    - run: npm login --registry=https://npm.pkg.github.com/
     - run: npm publish --tag ${{github.sha}}
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
