--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         node-version: 12.x
         registry-url: https://npm.pkg.github.com/
-        scope: '@bradenhs'
+        scope: bradenhs
     - run: npm publish --tag ${{github.sha}}
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
