--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
-  "name": "npm-release-test",
+  "name": "@bradenhs/npm-release-test",
   "version": "0.0.1",
   "main": "index.js",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/"
+  },
   "scripts": {
     "unit-test": "echo \"unit test\"",
     "integration-test": "echo \"integration test\"",
