--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         node-version: 12.x
         registry: https://npm.pkg.github.com
-    - run: ls
+    - run: ls -a
     - run: npm config ls
     - run: npm publish --tag ${{github.sha}}
       env:
