--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -10,7 +10,7 @@ jobs:
     - uses: actions/setup-node@v1
       with:
         node-version: 12.x
-        registry: https://npm.pkg.github.com
+        registry-url: https://npm.pkg.github.com
     - run: ls -a
     - run: npm config ls
     - run: npm publish --tag ${{github.sha}}
