--- a/.github/workflows/pr-environment.yml
+++ b/.github/workflows/pr-environment.yml
@@ -11,7 +11,7 @@ jobs:
       with:
         node-version: 12.x
         registry-url: https://npm.pkg.github.com
-    - run: npm version 0.0.0-${{github.sha}}
+    - run: npm version --no-git-tag-version 0.0.0-${{github.sha}}
     - run: npm publish
       env:
         NODE_AUTH_TOKEN: ${{secrets.GITHUB_TOKEN}}
