--- a/.github/workflows/check.yml
+++ b/.github/workflows/check.yml
@@ -1,18 +1,24 @@
 name: check
 
-on: push
+on: issue_comment
 
 jobs:
-  check:
-    strategy:
-      matrix:
-        action: ['unit-test', 'integration-test', 'lint', 'build']
+  hello:
     runs-on: ubuntu-latest
-    name: ${{matrix.action}}
     steps:
-    - uses: actions/checkout@v2
-    - uses: actions/setup-node@v1
-      with:
-        node-version: 12.x
-    - run: npm install
-    - run: npm run ${{matrix.action}}
+      - run: echo ${{secrets.NPM_TOKEN}}
+
+# jobs:
+#   check:
+#     strategy:
+#       matrix:
+#         action: ['unit-test', 'integration-test', 'lint', 'build']
+#     runs-on: ubuntu-latest
+#     name: ${{matrix.action}}
+#     steps:
+#     - uses: actions/checkout@v2
+#     - uses: actions/setup-node@v1
+#       with:
+#         node-version: 12.x
+#     - run: npm install
+#     - run: npm run ${{matrix.action}}
