--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@bradenhs/npm-release-test",
   "version": "0.0.1",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
+    "prepare": "tsc",
     "unit-test": "echo \"unit test\"",
     "integration-test": "echo \"integration test\"",
     "lint": "echo \"lint\"",
@@ -12,5 +13,10 @@
     "type": "git",
     "url": "git+https://github.com/bradenhs/npm-release-test.git"
   },
-  "files": ["index.js"]
+  "files": [
+    "index.js"
+  ],
+  "dependencies": {
+    "typescript": "^3.7.4"
+  }
 }
